--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 807px;
         }
         </style>
-        <title>Space for the Dead in Modern Delhi</title>
+        <title>Persisting in Place: Representation and Resilience of Delhi Graveyards</title>
     </head>
     <body>
         <div id="map">
